# EDW-Gentiane-MC

./: CMakeLists.txt  README.md
cmake/: Versioning.cmake
documentation/edw-gentiane-mc-run/: README.rst
examples/: CMakeLists.txt
examples/ex01/: CMakeLists.txt  README.rst  hpge_mcdata_read.cxx
examples/ex01/data/mctest_42/: README.rst  mctest_42.metadata
examples/ex01/data/mctest_42/config/: mctest_42-seeds.conf
programs/: CMakeLists.txt  edw-gentiane-mc-run.in
resources/: CMakeLists.txt  README.rst  _BuildResourceList.sh  _README_DEVELOPERS.rst  _resources.cmake
resources/config/: _README.rst
resources/config/gentiane/geometry/0.1/: README.rst  manager.conf
resources/config/gentiane/geometry/0.1/mapping/: categories.lis
resources/config/gentiane/geometry/0.1/models/: gentiane_assembly.geom  world.geom
resources/config/gentiane/geometry/0.1/models/Detector/: brass_rod.geom  contact_plate.geom  core_internal_detector_room.data  crystal_support.geom  crystal_support_base.geom  crystal_support_polycone.data  detector_alu_base.geom  detector_envelope.data  detector_envelope.geom  external_cover.geom  external_cover_polycone.data  germanium_crystal.geom  internal_chamber.geom  internal_crystal_stack.geom  teflon_block.geom  top_copper_finger.geom
resources/config/gentiane/geometry/0.1/models/Sample/: sample.geom  sample_box.geom
resources/config/gentiane/geometry/0.1/models/Shielding/: _external_lead_shield.geom.obsolete  copper_shield_box.geom  core_internal_detector_room.data  internal_lead_shield.geom
resources/config/gentiane/geometry/0.1/plugins/: material_aliases.def  materials.conf  materials.def
resources/config/gentiane/simulation/: README.rst
resources/config/gentiane/simulation/geant4_control/0.1/: README.rst  manager.conf
resources/config/gentiane/simulation/geant4_control/0.1/hits/: step_hit_processors.conf
resources/config/gentiane/simulation/geant4_control/0.1/physics/: em.conf  particles.conf
resources/config/gentiane/simulation/geant4_control/0.1/visu/: geant4_visualization.mac
resources/config/gentiane/simulation/primary_events/0.1/: README.rst  manager.conf
resources/config/gentiane/simulation/primary_events/0.1/generators/: generators.def
resources/config/gentiane/simulation/vertexes/0.1/: README.rst  manager.conf
resources/config/gentiane/simulation/vertexes/0.1/generators/: basic_generators.def
resources/config/gentiane/simulation/vertexes/0.1/generators/Detector/: detector_generators.def
resources/config/gentiane/simulation/vertexes/0.1/generators/Environment/: lab_generators.def
resources/config/gentiane/simulation/vertexes/0.1/generators/Sample/: sample_generators.def
resources/config/gentiane/simulation/vertexes/0.1/generators/Shielding/: external_copper_generators.def  internal_lead_generators.def
utilities/: CMakeLists.txt  README.rst  edw-gentiane-mc-query.in  quick_install.sh
