# - examples:

# Install examples:

install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/ex01"
  DESTINATION "${EDWGentianeMC_INSTALL_DATAROOTDIR}/examples"
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
  DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE)

# -end