#

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/edw-gentiane-mc-run.in"
  "${CMAKE_CURRENT_BINARY_DIR}/edw-gentiane-mc-run"
  @ONLY)

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/edw-gentiane-mc-run"
  DESTINATION "${CMAKE_INSTALL_FULL_BINDIR}"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE)

# - end